--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,235 @@
-$primary-color: #ffd700;
+@import "~bootstrap/scss/bootstrap";
 
-@import 'animate.css';
-@import '~loaders.css/src/animations/pacman.scss';
 
-.loader-active {
-  display: block;
-  position: absolute;
-  left:0;
-  right:0;
-  margin: auto;
-  top:0;
-  bottom: 0;
-  width: 50px;
-  height: 50px;
-  animation: fadeOut 1s 1s;
-  animation-fill-mode: forwards; 
+.image {
+    height: 65px;
+    width: 65px;
 }
+
+.facebook-link :hover {
+    color: #ffd700;
+
+}
+
+.contain {
+    
+    .texxt {
+        
+        h1 {
+            color: #071740;
+            font-size: 100px;
+            margin: 0;
+            
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-weight: 400;
+          }
+         
+          h2 {
+             color: #8d8d8d;
+             margin-top: 20px;
+             font-weight: 400;
+             font-size: 53px;
+             font-family: sans-serif;
+             letter-spacing: 3px;
+             animation: fadeIn 1s backwards;
+           }
+           .flat-button {
+            color: #ffd700;
+            background: #071740;
+            font-size: 30px;
+            font-weight: 400;
+            letter-spacing: 4px;
+            margin-top: 25px;
+            margin-bottom: 25px;
+            animation: fadeIn 1s 1.8s backwards;
+         
+            &:hover {
+              background: #ffd700;
+              color: #071740;
+            }
+         
+          }
+
+           
+    }
+  
+        .text-zone {
+          width: 35%;
+        
+          display: table-cell;
+        
+      
+          h1 {
+            font-size: 53px;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            color:#071740;
+            font-weight: 400;
+            margin: auto;
+            margin-top: 30px;
+            margin-bottom: 40px;
+            
+          }
+          p {
+            font-size: 25px;
+            color: #8d8d8d;
+            font-family: sans-serif;
+            font-weight: 500;
+            min-width: fit-content;
+            animation: pulse 1s;
+            
+            &:nth-of-type(1) {
+              animation-delay: 1.1s;
+            }
+            &:nth-of-type(2) {
+              animation-delay: 1.2s;
+            }
+            &:nth-of-type(3) {
+              animation-delay: 1.3s;
+            }
+            &:nth-of-type(4) {
+              animation-delay: 1.4s;
+            }
+            &:nth-of-type(5) {
+              animation-delay: 1.5s;
+            }
+          }
+        }
+        .text-animate-hover {
+          &:hover{
+            color: #ffd700;
+          }
+        }
+        .contact-form {
+          width: 100%;
+          margin-top: 20px;
+        
+          ul {
+            padding: 0;
+            margin: 0;
+        
+            li{
+              padding: 0;
+              margin: 0;
+              list-style: none;
+              margin-bottom: 10px;
+              
+              animation: fadeInUp 2s 2s;
+              animation-fill-mode: forwards;
+              clear: both;
+            }
+        
+            li.half {
+              width: 49%;
+              margin-left: 2%;
+              float: left;
+              clear: none;
+        
+              &:first-child {
+                margin-left: 0;
+              }
+            }
+          }
+        
+          input[type='text'],
+          input[type='email'] {
+            width: 100%;
+            border: 0;
+            background: #071740;
+            height: 50px;
+            font-size: 16px;
+            color: #ffd700;
+            padding: 0 20px;
+            box-sizing: border-box;
+          }
+        
+          textarea {
+            width: 100%;
+            border: 0;
+            background: #071740;
+            height: 50px;
+            font-size: 16px;
+            color: #ffd700;
+            padding: 20px;
+            min-height: 150px;
+            box-sizing: border-box;
+          }
+          
+          .flat-button {
+            color: #ffd700;
+            background: 0 0 #071740;
+            font: 11px;
+            letter-spacing: 3px;
+            text-decoration: none;
+            padding: 8px 10px;
+            border: 1px solid #ffd700;
+            float: right;
+            border-radius: 4px;
+            cursor: pointer;
+        
+            &:hover {
+              background: #ffd700;
+              color: #333;
+            }
+          }
+        }
+        .info-map {
+          color: #ffd700;
+          background-color: #071740;
+          width: 267px;
+          padding: 20px;
+          
+          font-family: 'Courier New', Courier, monospace;
+          font-size: 17px;
+          font-weight: 300;
+          animation: fadeIn 1s 1.5s;
+          animation-fill-mode: forwards;
+
+        }
+        
+      }
+      
+      
+      
+
+
+
+.carou-s {
+    
+    margin: none;
+}
+
+.header {
+  margin: auto;
+}
+
+@media only screen and (max-width: 800px) {
+  .contain {
+    
+    .texxt {
+  
+        h1 {
+            
+            font-size: 50px;
+          }
+         
+          h2 {
+             color: #8d8d8d;
+             margin-top: 20px;
+             font-weight: 400;
+             font-size: 25px;
+             font-family: sans-serif;
+             letter-spacing: 3px;
+             animation: fadeIn 1s backwards;
+           } 
+}
+.text-zone {
+  p {
+    font-size: 13px;
+  }
+}
+.info-map {
+  width: 218px;
+  font-size: 14px;
+}
+  }
+} 
