--- a/src/App.scss
+++ b/src/App.scss
@@ -50,6 +50,8 @@
          
           }
 
+          
+
            
     }
   
@@ -60,7 +62,7 @@
         
       
           h1 {
-            font-size: 53px;
+            font-size: 100px;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             color:#071740;
             font-weight: 400;
@@ -134,10 +136,10 @@
           input[type='email'] {
             width: 100%;
             border: 0;
-            background: #071740;
+            background: #7a7a7a;
             height: 50px;
             font-size: 16px;
-            color: #ffd700;
+            color: #0a0b0e;
             padding: 0 20px;
             box-sizing: border-box;
           }
@@ -145,36 +147,50 @@
           textarea {
             width: 100%;
             border: 0;
-            background: #071740;
+            background: #7a7a7a;
             height: 50px;
             font-size: 16px;
-            color: #ffd700;
+            color: #0a0b0e;
             padding: 20px;
             min-height: 150px;
             box-sizing: border-box;
           }
-          
-          .flat-button {
-            color: #ffd700;
-            background: 0 0 #071740;
+          .flat-button-submit {
+            background: #7a7a7a;
+            color: #0a0b0e;
             font: 11px;
             letter-spacing: 3px;
             text-decoration: none;
             padding: 8px 10px;
-            border: 1px solid #ffd700;
+            border: 1px solid ;
             float: right;
             border-radius: 4px;
             cursor: pointer;
-        
+         
             &:hover {
-              background: #ffd700;
-              color: #333;
+              color: #7a7a7a;
+              background: #0a0b0e;
             }
+         
           }
+          ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+            color: #0a0a0a;
+            opacity: 1; /* Firefox */
+          }
+          
+          :-ms-input-placeholder { /* Internet Explorer 10-11 */
+            color: #0a0a0a;
+          }
+          
+          ::-ms-input-placeholder { /* Microsoft Edge */
+            color: #0a0a0a;
+          }
+          
+          
         }
         .info-map {
-          color: #ffd700;
-          background-color: #071740;
+          color: #0a0b0e;
+          background-color: #7a7a7a;
           width: 267px;
           padding: 20px;
           
@@ -202,8 +218,10 @@
   margin: auto;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 990px) {
   .contain {
+
+
     
     .texxt {
   
@@ -221,15 +239,23 @@
              letter-spacing: 3px;
              animation: fadeIn 1s backwards;
            } 
-}
-.text-zone {
-  p {
-    font-size: 13px;
-  }
-}
-.info-map {
-  width: 218px;
-  font-size: 14px;
-}
-  }
-} 
+        }
+        .contact-form{
+          .flat-button-submit{
+            width: 100%;
+            font-size: 15px;
+            font-weight: 600;
+          }
+        }
+            .text-zone {
+              p {
+                font-size: 13px;
+              }
+            }
+            .info-map {
+              width: 100%;
+              font-size: 30px;
+              text-align: center;
+            }
+              }
+      } 
